sumo/tests/traci/get_variable/ArealDetector/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Tue Dec 16 15:25:23 2014


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=173 varID=255 objID=dummy
.. Answered with error to command (173), [description: Get Areal Detector Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
